--- a/practice.ipynb
+++ b/practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "import os\n",
     "from env import host, user, password\n",
     "from pydataset import data\n",
-    "from acquire import new_titanic_data, new_iris_data"
+    "from acquire import new_titanic_data, new_iris_data, get_iris_data"
    ]
   },
   {
