--- a/classification_exercises.ipynb
+++ b/classification_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1655,6 +1655,66 @@
    ],
    "source": [
     "df_google.Sex.value_counts(dropna=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_______"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercises- Prepare.py (May 14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The end product of this exercise should be the specified functions in a python script named prepare.py. Do these in your classification_exercises.ipynb first, then transfer to the prepare.py file.\n",
+    "\n",
+    "This work should all be saved in your local classification-exercises repo. Then add, commit, and push your changes.\n",
+    "\n",
+    "Using the Iris Data:\n",
+    "\n",
+    "Use the function defined in acquire.py to load the iris data.\n",
+    "\n",
+    "Drop the species_id and measurement_id columns.\n",
+    "\n",
+    "Rename the species_name column to just species.\n",
+    "\n",
+    "Create dummy variables of the species name.\n",
+    "\n",
+    "Create a function named prep_iris that accepts the untransformed iris data, and returns the data with the transformations above applied."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use the function defined in acquire.py to load the iris data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-104-8bbba232df59>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-104-8bbba232df59>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    from acquire import get_iris_data()\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "from acquire import get_iris_data"
    ]
   },
   {
