more data prep notes

--- a/Data Preparation Notes.ipynb
+++ b/Data Preparation Notes.ipynb
@@ -1864,7 +1864,7 @@
     "    '''\n",
     "    takes in a dataframe of the titanic dataset as it is acquired and returns a cleaned dataframe\n",
     "    arguments: df: a pandas DataFrame with the expected feature names and columns\n",
-    "    return: clean_df: a DataFrame with the cealning operations performed on it\n",
+    "    return: clean_df: a DataFrame with the cleaning operations performed on it\n",
     "    '''\n",
     "    df = df.drop_duplicates()\n",
     "    df = df.drop(columns=['deck', 'embarked', 'class', 'age'])\n",
