Update Tidy Data Notes.ipynb

--- a/Tidy Data Notes.ipynb
+++ b/Tidy Data Notes.ipynb
@@ -3738,6 +3738,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class = \"alert alert- block alert-info\">\n",
+    "<b>imagine the tidy table in your mind FIRST<b>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
