--- a/tidy_data.ipynb
+++ b/tidy_data.ipynb
@@ -271,6 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#talk it out...\n",
     "#p=1 = 100%\n",
     "#a=0 = 0% absent\n",
     "#t=.9 = 90% tardy\n",
