--- a/tidy_data.ipynb
+++ b/tidy_data.ipynb
@@ -274,7 +274,7 @@
     "#talk it out...\n",
     "#p=1 = 100%\n",
     "#a=0 = 0% absent\n",
-    "#t=.9 = 90% tardy\n",
+    "#t=.9 = 90% tardy/10=100, 1=.1\n",
     "#h=.5 = 50% half day"
    ]
   },
