tidy exercises add

--- a/tidy_data.ipynb
+++ b/tidy_data.ipynb
@@ -61,20 +61,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>2018-01-01</th>\n",
+       "      <th>2018-01-02</th>\n",
+       "      <th>2018-01-03</th>\n",
+       "      <th>2018-01-04</th>\n",
+       "      <th>2018-01-05</th>\n",
+       "      <th>2018-01-06</th>\n",
+       "      <th>2018-01-07</th>\n",
+       "      <th>2018-01-08</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sally</td>\n",
+       "      <td>P</td>\n",
+       "      <td>T</td>\n",
+       "      <td>T</td>\n",
+       "      <td>H</td>\n",
+       "      <td>P</td>\n",
+       "      <td>A</td>\n",
+       "      <td>T</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>A</td>\n",
+       "      <td>P</td>\n",
+       "      <td>T</td>\n",
+       "      <td>T</td>\n",
+       "      <td>T</td>\n",
+       "      <td>T</td>\n",
+       "      <td>A</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Billy</td>\n",
+       "      <td>A</td>\n",
+       "      <td>T</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "      <td>H</td>\n",
+       "      <td>T</td>\n",
+       "      <td>P</td>\n",
+       "      <td>T</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>John</td>\n",
+       "      <td>P</td>\n",
+       "      <td>T</td>\n",
+       "      <td>H</td>\n",
+       "      <td>P</td>\n",
+       "      <td>P</td>\n",
+       "      <td>T</td>\n",
+       "      <td>P</td>\n",
+       "      <td>P</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Unnamed: 0 2018-01-01 2018-01-02 2018-01-03 2018-01-04 2018-01-05  \\\n",
+       "0      Sally          P          T          T          H          P   \n",
+       "1       Jane          A          P          T          T          T   \n",
+       "2      Billy          A          T          A          A          H   \n",
+       "3       John          P          T          H          P          P   \n",
+       "\n",
+       "  2018-01-06 2018-01-07 2018-01-08  \n",
+       "0          A          T          T  \n",
+       "1          T          A          T  \n",
+       "2          T          P          T  \n",
+       "3          T          P          P  "
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "attendance.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 9)"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sales.shape"
+    "attendance.shape"
    ]
   },
   {
@@ -433,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +805,7 @@
        "29    17             z       0.436677"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -824,14 +939,15 @@
        "17             0.391560  0.594126  0.436677"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#pivot table\n",
-    "coffee.pivot_table(index=['hour'], columns='coffee_carafe', values = 'coffee_amount')"
+    "coffee_pivot = coffee.pivot_table(index=['hour'], columns='coffee_carafe', values = 'coffee_amount')\n",
+    "coffee_pivot"
    ]
   },
   {
@@ -843,11 +959,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((30, 3), (10, 3))"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#yes. easier to read"
+    "#yes. easier to read, coffee_pivot is not as spread out\n",
+    "coffee.shape, coffee_pivot.shape"
    ]
   },
   {
