Add to exercises

--- a/tidy_data.ipynb
+++ b/tidy_data.ipynb
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1115,7 @@
        "7           d:top  96.873178  76.101363  59.571620  50.971626"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1265,7 @@
        "7     d:top  96.873178  76.101363  59.571620  50.971626"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1295,7 @@
        "Name: delete, dtype: object"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1436,7 @@
        "7     d:top  96.873178  76.101363  59.571620  50.971626      d      top"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -1528,33 +1528,6 @@
        "      <td>c</td>\n",
        "      <td>bottom</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>71.306308</td>\n",
-       "      <td>82.795477</td>\n",
-       "      <td>92.098049</td>\n",
-       "      <td>53.960273</td>\n",
-       "      <td>c</td>\n",
-       "      <td>top</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>52.799753</td>\n",
-       "      <td>58.670419</td>\n",
-       "      <td>51.747686</td>\n",
-       "      <td>56.183110</td>\n",
-       "      <td>d</td>\n",
-       "      <td>bottom</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>96.873178</td>\n",
-       "      <td>76.101363</td>\n",
-       "      <td>59.571620</td>\n",
-       "      <td>50.971626</td>\n",
-       "      <td>d</td>\n",
-       "      <td>top</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1565,13 +1538,10 @@
        "1  51.709751  52.009735  68.576858  50.228470      a      top\n",
        "2  57.095320  61.904369  61.196980  99.248541      b   bottom\n",
        "3  82.455004  95.224151  98.594881  58.169349      b      top\n",
-       "4  96.470207  52.001358  92.893227  65.473084      c   bottom\n",
-       "5  71.306308  82.795477  92.098049  53.960273      c      top\n",
-       "6  52.799753  58.670419  51.747686  56.183110      d   bottom\n",
-       "7  96.873178  76.101363  59.571620  50.971626      d      top"
+       "4  96.470207  52.001358  92.893227  65.473084      c   bottom"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,7 +1549,7 @@
    "source": [
     "#remove delete column\n",
     "cake = cake.drop(columns='delete')\n",
-    "cake"
+    "cake.head()"
    ]
   },
   {
@@ -2041,30 +2011,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "recipe            d\n",
-       "position        top\n",
-       "temp            300\n",
-       "score       99.2485\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cake_melt.sort_values(by='score').max()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 81,
    "metadata": {},
    "outputs": [
@@ -2151,6 +2097,28 @@
    ],
    "source": [
     "cake_melt.sort_values(by='score').tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "temp  position  recipe\n",
+       "300   bottom    b         99.248541\n",
+       "Name: score, dtype: float64"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cake_melt.groupby(['temp', 'position','recipe']).score.mean().nlargest(1)"
    ]
   },
   {
