add to exercises

--- a/model_evaluation.ipynb
+++ b/model_evaluation.ipynb
@@ -542,6 +542,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positive = 'Defect'\n",
+    "\n",
+    "subset_duck= duck_factory[duck_factory.actual == positive]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall rate for model1 is 50.00%\n",
+      "Recall rate for model2 is 56.25%\n",
+      "Recall rate for model3 is 81.25%\n"
+     ]
+    }
+   ],
+   "source": [
+    "recall_duck1 = (subset_duck.actual == subset_duck.model1).mean()\n",
+    "recall_duck2 =(subset_duck.actual == subset_duck.model2).mean()\n",
+    "recall_duck3 = (subset_duck.actual == subset_duck.model3).mean()\n",
+    "    \n",
+    "print(f'Recall rate for model1 is{recall_duck1: .2%}')\n",
+    "print(f'Recall rate for model2 is{recall_duck2: .2%}')\n",
+    "print(f'Recall rate for model3 is{recall_duck3: .2%}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -556,6 +599,35 @@
    "source": [
     "- we cant to avoid false positives because giving away a Hawaiin vacation would be very expensive. \n",
     "- so we would use precision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision rate for model1 is 80.00%\n",
+      "Precision rate for model2 is 10.00%\n",
+      "Precision rate for model3 is 13.13%\n"
+     ]
+    }
+   ],
+   "source": [
+    "subset1= duck_factory[duck_factory.model1 == positive]\n",
+    "subset2= duck_factory[duck_factory.model2 == positive]\n",
+    "subset3= duck_factory[duck_factory.model3 == positive]\n",
+    "\n",
+    "precision1 = (subset1.model1 == subset1.actual).mean()\n",
+    "precision2 = (subset2.model2 == subset2.actual).mean()\n",
+    "precision3 = (subset3.model3 == subset3.actual).mean()\n",
+    "\n",
+    "print(f'Precision rate for model1 is{precision1: .2%}')\n",
+    "print(f'Precision rate for model2 is{precision2: .2%}')\n",
+    "print(f'Precision rate for model3 is{precision3: .2%}')"
    ]
   },
   {
@@ -902,13 +974,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### c. Suppose you are working on a team that solely deals with cat pictures. Which of these models would you recomend for Phase I? For Phase II?"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -939,6 +1004,306 @@
     "print(f'Recall rate for model2 is{recall_model2: .2%}')\n",
     "print(f'Recall rate for model3 is{recall_model3: .2%}')\n",
     "print(f'Recall rate for model4 is{recall_model4: .2%}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**model 4 has the best recall"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### c. Suppose you are working on a team that solely deals with cat pictures. Which of these models would you recomend for Phase I? For Phase II?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy rate for model1 is 80.74%\n",
+      "Accuracy rate for model2 is 63.04%\n",
+      "Accuracy rate for model3 is 50.96%\n",
+      "Accuracy rate for model4 is 74.26%\n"
+     ]
+    }
+   ],
+   "source": [
+    "#find the accuracy of all 4 models\n",
+    "accuracy_model1 = (paws.actual == paws.model1).mean()\n",
+    "accuracy_model2 = (paws.actual == paws.model2).mean()\n",
+    "accuracy_model3 = (paws.actual == paws.model3).mean()\n",
+    "accuracy_model4 = (paws.actual == paws.model4).mean()\n",
+    "\n",
+    "print(f'Accuracy rate for model1 is{accuracy_model1: .2%}')\n",
+    "print(f'Accuracy rate for model2 is{accuracy_model2: .2%}')\n",
+    "print(f'Accuracy rate for model3 is{accuracy_model3: .2%}')\n",
+    "print(f'Accuracy rate for model4 is{accuracy_model4: .2%}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positive_cat = 'cat'\n",
+    "subset_cat = paws[paws.actual == positive_cat]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall rate for model1 is 81.50%\n",
+      "Recall rate for model2 is 89.06%\n",
+      "Recall rate for model3 is 51.15%\n",
+      "Recall rate for model4 is 34.54%\n"
+     ]
+    }
+   ],
+   "source": [
+    "recall_model1 = (subset_cat.actual == subset_cat.model1).mean() \n",
+    "recall_model2 = (subset_cat.actual == subset_cat.model2).mean()\n",
+    "recall_model3 = (subset_cat.actual == subset_cat.model3).mean()\n",
+    "recall_model4 = (subset_cat.actual == subset_cat.model4).mean()\n",
+    "\n",
+    "print(f'Recall rate for model1 is{recall_model1: .2%}')\n",
+    "print(f'Recall rate for model2 is{recall_model2: .2%}')\n",
+    "print(f'Recall rate for model3 is{recall_model3: .2%}')\n",
+    "print(f'Recall rate for model4 is{recall_model4: .2%}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_______________________________"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### #5 Follow the links below to read the documentation about each function, then apply those functions to the data from the previous problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### sklearn.metrics.accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracysk_model1 = accuracy_score(paws.actual, paws.model1)\n",
+    "accuracysk_model2 = accuracy_score(paws.actual, paws.model2)\n",
+    "accuracysk_model3 = accuracy_score(paws.actual, paws.model3)\n",
+    "accuracysk_model4 = accuracy_score(paws.actual, paws.model4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy rate for model1 is 80.74%\n",
+      "Accuracy rate for model2 is 63.04%\n",
+      "Accuracy rate for model3 is 50.96%\n",
+      "Accuracy rate for model4 is 74.26%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Accuracy rate for model1 is{accuracysk_model1: .2%}')\n",
+    "print(f'Accuracy rate for model2 is{accuracysk_model2: .2%}')\n",
+    "print(f'Accuracy rate for model3 is{accuracysk_model3: .2%}')\n",
+    "print(f'Accuracy rate for model4 is{accuracysk_model4: .2%}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### sklearn.metrics.precision_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import precision_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precisionsk_model1 = precision_score(paws.actual, paws.model1, pos_label = 'dog')\n",
+    "precisionsk_model2 = precision_score(paws.actual, paws.model2, pos_label = 'dog')\n",
+    "precisionsk_model3 = precision_score(paws.actual, paws.model3, pos_label = 'dog')\n",
+    "precisionsk_model4 = precision_score(paws.actual, paws.model4, pos_label = 'dog')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision rate for model1 is 89.00%\n",
+      "Precision rate for model2 is 89.32%\n",
+      "Precision rate for model3 is 65.99%\n",
+      "Precision rate for model4 is 73.12%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Precision rate for model1 is{precisionsk_model1: .2%}')\n",
+    "print(f'Precision rate for model2 is{precisionsk_model2: .2%}')\n",
+    "print(f'Precision rate for model3 is{precisionsk_model3: .2%}')\n",
+    "print(f'Precision rate for model4 is{precisionsk_model4: .2%}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### sklearn.metrics.recall_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import recall_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recallsk_model1 = recall_score(paws.actual, paws.model1, pos_label = 'dog')\n",
+    "recallsk_model2 = recall_score(paws.actual, paws.model2, pos_label = 'dog')\n",
+    "recallsk_model3 = recall_score(paws.actual, paws.model3, pos_label = 'dog')\n",
+    "recallsk_model4 = recall_score(paws.actual, paws.model4, pos_label = 'dog')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall rate for model1 is 80.33%\n",
+      "Recall rate for model2 is 49.08%\n",
+      "Recall rate for model3 is 50.86%\n",
+      "Recall rate for model4 is 95.57%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Recall rate for model1 is{recallsk_model1: .2%}')\n",
+    "print(f'Recall rate for model2 is{recallsk_model2: .2%}')\n",
+    "print(f'Recall rate for model3 is{recallsk_model3: .2%}')\n",
+    "print(f'Recall rate for model4 is{recallsk_model4: .2%}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### sklearn.metrics.classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classsk_model1 = classification_report(paws.actual, paws.model1)\n",
+    "classsk_model2 = classification_report(paws.actual, paws.model2)\n",
+    "classsk_model3 = classification_report(paws.actual, paws.model3)\n",
+    "classsk_model4 = classification_report(paws.actual, paws.model4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Unknown format code '%' for object of type 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-92-79e14ea2759d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Classification rate for model1 is{classsk_model1: .2%}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Classification rate for model2 is{classsk_model2: .2%}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Classification rate for model3 is{classsk_model3: .2%}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Classification rate for model4 is{classsk_model4: .2%}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Unknown format code '%' for object of type 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Classification rate for model1 is{classsk_model1: .2%}')\n",
+    "print(f'Classification rate for model2 is{classsk_model2: .2%}')\n",
+    "print(f'Classification rate for model3 is{classsk_model3: .2%}')\n",
+    "print(f'Classification rate for model4 is{classsk_model4: .2%}')"
    ]
   },
   {
