--- a/model_evaluation.ipynb
+++ b/model_evaluation.ipynb
@@ -24,9 +24,9 @@
     "\n",
     "2. Given the following confusion matrix, evaluate (by hand) the model's performance.\n",
     "    \n",
-    "    a. In the context of this problem, what is a false positive?\n",
-    "    b. In the context of this problem, what is a false negative?\n",
-    "    c. How would you describe this model?\n",
+    "    - a. In the context of this problem, what is a false positive?\n",
+    "    - b. In the context of this problem, what is a false negative?\n",
+    "    - c. How would you describe this model?\n",
     "\n",
     "<br>\n",
     "\n",
@@ -597,8 +597,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "- we cant to avoid false positives because giving away a Hawaiin vacation would be very expensive. \n",
-    "- so we would use precision"
+    "# we want to avoid false positives because giving away a Hawaiin vacation would be very expensive. \n",
+    "# so we would use precision"
    ]
   },
   {
@@ -906,13 +906,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dog    3254\n",
+       "cat    1746\n",
+       "Name: actual, dtype: int64"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#get actual numbers\n",
+    "paws.actual.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "#accuracy metric- no subset needed for accuracy\n",
-    "\n",
-    "positive = 'dog'\n",
     "baseline_accuracy = (paws.baseline == paws.actual).mean()"
    ]
   },
@@ -946,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -961,6 +982,8 @@
     }
    ],
    "source": [
+    "positive = 'dog'\n",
+    "\n",
     "#find the accuracy of all 4 models\n",
     "accuracy_model1 = (paws.actual == paws.model1).mean()\n",
     "accuracy_model2 = (paws.actual == paws.model2).mean()\n",
@@ -1010,7 +1033,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**model 4 has the best recall"
+    "**model 4 has the highest recall**"
    ]
   },
   {
@@ -1022,26 +1045,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy rate for model1 is 80.74%\n",
-      "Accuracy rate for model2 is 63.04%\n",
-      "Accuracy rate for model3 is 50.96%\n",
-      "Accuracy rate for model4 is 74.26%\n"
+      "Accuracy rate for model1 is 81.50%\n",
+      "Accuracy rate for model2 is 89.06%\n",
+      "Accuracy rate for model3 is 51.15%\n",
+      "Accuracy rate for model4 is 34.54%\n"
      ]
     }
    ],
    "source": [
+    "positive_cat = 'cat'\n",
+    "\n",
+    "subset_cat = paws[paws.actual == positive_cat]\n",
+    "\n",
     "#find the accuracy of all 4 models\n",
-    "accuracy_model1 = (paws.actual == paws.model1).mean()\n",
-    "accuracy_model2 = (paws.actual == paws.model2).mean()\n",
-    "accuracy_model3 = (paws.actual == paws.model3).mean()\n",
-    "accuracy_model4 = (paws.actual == paws.model4).mean()\n",
+    "accuracy_model1 = (subset_cat.actual == subset_cat.model1).mean()\n",
+    "accuracy_model2 = (subset_cat.actual == subset_cat.model2).mean()\n",
+    "accuracy_model3 = (subset_cat.actual == subset_cat.model3).mean()\n",
+    "accuracy_model4 = (subset_cat.actual == subset_cat.model4).mean()\n",
     "\n",
     "print(f'Accuracy rate for model1 is{accuracy_model1: .2%}')\n",
     "print(f'Accuracy rate for model2 is{accuracy_model2: .2%}')\n",
@@ -1051,17 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "positive_cat = 'cat'\n",
-    "subset_cat = paws[paws.actual == positive_cat]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,26 +1301,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Unknown format code '%' for object of type 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-92-79e14ea2759d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Classification rate for model1 is{classsk_model1: .2%}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Classification rate for model2 is{classsk_model2: .2%}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Classification rate for model3 is{classsk_model3: .2%}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Classification rate for model4 is{classsk_model4: .2%}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Unknown format code '%' for object of type 'str'"
-     ]
+     "data": {
+      "text/plain": [
+       "'              precision    recall  f1-score   support\\n\\n         cat       0.69      0.82      0.75      1746\\n         dog       0.89      0.80      0.84      3254\\n\\n    accuracy                           0.81      5000\\n   macro avg       0.79      0.81      0.80      5000\\nweighted avg       0.82      0.81      0.81      5000\\n'"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(f'Classification rate for model1 is{classsk_model1: .2%}')\n",
-    "print(f'Classification rate for model2 is{classsk_model2: .2%}')\n",
-    "print(f'Classification rate for model3 is{classsk_model3: .2%}')\n",
-    "print(f'Classification rate for model4 is{classsk_model4: .2%}')"
+    "classsk_model1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'              precision    recall  f1-score   support\\n\\n         cat       0.48      0.89      0.63      1746\\n         dog       0.89      0.49      0.63      3254\\n\\n    accuracy                           0.63      5000\\n   macro avg       0.69      0.69      0.63      5000\\nweighted avg       0.75      0.63      0.63      5000\\n'"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classsk_model2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'              precision    recall  f1-score   support\\n\\n         cat       0.36      0.51      0.42      1746\\n         dog       0.66      0.51      0.57      3254\\n\\n    accuracy                           0.51      5000\\n   macro avg       0.51      0.51      0.50      5000\\nweighted avg       0.55      0.51      0.52      5000\\n'"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classsk_model3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'              precision    recall  f1-score   support\\n\\n         cat       0.81      0.35      0.48      1746\\n         dog       0.73      0.96      0.83      3254\\n\\n    accuracy                           0.74      5000\\n   macro avg       0.77      0.65      0.66      5000\\nweighted avg       0.76      0.74      0.71      5000\\n'"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classsk_model4"
    ]
   },
   {
