Update Intro to Modeling.ipynb

--- a/Intro to Modeling.ipynb
+++ b/Intro to Modeling.ipynb
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "# TODO: view the accuracy on the validate split\n",
-    "model.score"
+    "model.score(X_validate, y_validate)"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "source": [
     "#use the column you just created and the actua values in the survived column\n",
     "#to genderate a classification report\n",
-    "print(classification_report(train.survived, train.prediction)"
+    "print(classification_report(train.survived, train.prediction))"
    ]
   },
   {
